Fix info alignment

--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ ul {
   margin-bottom: 20px;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: baseline;
 }
 
 .info__icon {
